# vibewig

./: CLAUDE.md  Cargo.toml  KNOWLEDGE.md  README.md
.claude/: settings.json
.claude/commands/: autonomous.md  catchup.md  handoff.md  status.md
docs/: about.html  decisions.md  essay-outline.md  essay.html  essay.md  features.json  index.html  progress.md
scripts/: build-plugin.sh  install-hooks.sh  install-plugin.sh  pre-commit
vibewig-client/: Cargo.toml
vibewig-client/src/: main.rs
vibewig-plugin/: Cargo.toml
vibewig-plugin/src/: lib.rs
xtask/: Cargo.toml
