[package]
name = "vibewig-client"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "vibewig"
path = "src/main.rs"

[dependencies]
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-tungstenite.workspace = true
futures-util.workspace = true

# CLI
clap = { version = "4.0", features = ["derive"] }

# Nice errors
anyhow = "1.0"
