[package]
name = "vibewig-plugin"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
nih_plug = { git = "https://github.com/bedwards/nih-plug.git", branch = "feature/track-info-extension", features = ["assert_process_allocs"] }
serde.workspace = true
serde_json.workspace = true

# WebSocket server (sync, runs in audio thread-safe manner)
tungstenite = "0.24"

# Thread-safe communication
parking_lot = "0.12"
crossbeam-channel = "0.5"
